@@ -1,5 +1,8 @@
 pipeline {
     agent any
+    environment {
+      MAVEN_OPTS="--add-opens java.base/java.lang=ALL-UNNAMED"   
+    }   
 
     stages {
         stage('Test') {
